# NeoCoder-neo4j-ai-workflow

./: .gitignore  ACTIVATION_GUIDE.md  AI_ASSISTANT_GUIDE.md  CHANGELOG.md  INSTALLATION_COMPLETE.md  Integrating LV Framework.md  QUICKSTART.md  README.md  README_LV_FRAMEWORK.md  claude-app-config.json  cypher_snippet_tool_plan.md  docker-compose.yml  example_mcp_config.json  install_lv_framework.bat  install_lv_framework.sh  lv_framework_config.toml  lv_framework_demo_complete.py  pyproject.toml  requirements.txt  setup_dev_environment.sh  validate_lv_framework.py
analysis/: README.md  code_analysis_incarnation.md  integration_points.md  neo4j_schema.md  server_implementation.md  workflow_templates.md
archive/: cypher_snippets.py  data_analysis_incarnation_original.py  fix_template.cypher  init_db_fixed.py  initialize_db.py  knowledge_graph_incarnation_pre_lv.py  repo_dev_ideas.md  run_server.sh  server.py  server_fixed.py  start_incarnation.sh  update_readme.py
docs/: COMPLETE_EVENT_LOOP_FIX.md  DATA_ANALYSIS_ENHANCEMENT_PLAN.md  ENHANCED_KNOWLEDGE_GRAPH_TOOLS.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  EVENT_LOOP_FIX_SUMMARY.md  FIXES.md  README.md  clean_cypher_snippets.md  create_entities_fix_summary.md  cypher_snippets_reference.md  graph_structure.md  incarnation_cypher_guide.md  knowledge_graph_usage.md  system_directory.md  system_instructions.md  workflow_guide.md
incarnations_library/: README.md
scripts/: add_enhanced_templates.py  add_new_incarnation.py  add_templates.py  clean_nodes.py  init_graph.py  template_manager.py  update_readme.py  (+1 more)
(+69 files in other folders)
